; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_usage.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i8* }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@FullVersionStr = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [487 x i8] c"usage: tlclient [-v] [-r] [-a<hostname>] [-p<port>] [-u<username>] [-b<backlog>] [-c<max-conn>] [-l<log-name>] <scheme.tl>\0A\09Parsing SCHEME expressions, sending RPC requests to Kitten PHP, unserialize obtained result.\0A\09-v\09output statistical and debug information into stderr\0A\09-A<auth_key_id>\09auth_key_id as unsigned long long hex number\0A\09\09if auth_key_id is zero (auth_key_id, session_id, message_id will not sent after req_id)\0A\09-S<session_id>\09session_id as unsigned long long hex number\0A\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"\0Atlclient commands:\0A\00", align 1
@CMD = common dso_local global %struct.TYPE_2__* null, align 8
@.str.3 = private unnamed_addr constant [10 x i8] c"%s %s\09%s\0A\00", align 1
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage() #0 {
  %1 = alloca i32, align 4
  %2 = load i8*, i8** @FullVersionStr, align 8
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %2)
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([487 x i8], [487 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %45, %0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CMD, align 8
  %8 = load i32, i32* %1, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %48

14:                                               ; preds = %6
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CMD, align 8
  %16 = load i32, i32* %1, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CMD, align 8
  %22 = load i32, i32* %1, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load i8*, i8** %25, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %35

28:                                               ; preds = %14
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CMD, align 8
  %30 = load i32, i32* %1, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = load i8*, i8** %33, align 8
  br label %36

35:                                               ; preds = %14
  br label %36

36:                                               ; preds = %35, %28
  %37 = phi i8* [ %34, %28 ], [ getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0), %35 ]
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CMD, align 8
  %39 = load i32, i32* %1, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i64 %40
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 2
  %43 = load i8*, i8** %42, align 8
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* %20, i8* %37, i8* %43)
  br label %45

45:                                               ; preds = %36
  %46 = load i32, i32* %1, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %1, align 4
  br label %6

48:                                               ; preds = %6
  %49 = call i32 @exit(i32 2) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
